--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="error_end">.</string>
     <string name="progress_signup">Signing you up!</string>
     <string name="progress_login">Logging you up!</string>
+    <string name="signup">Sign up</string>
+    <string name="login">Log in</string>
 </resources>
