--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="signup">Sign up</string>
     <string name="login">Log in</string>
     <string name="scan">Scan</string>
+    <string name="submit">Submit</string>
     <string name="no_location_detected">Could not detect your location.</string>
 </resources>
