--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="action_help">Help</string>
+    <string name="action_gems">Hidden Gems</string>
+    <string name="action_leaderboard">Leaderboard</string>
 
     <string name="username">Username</string>
     <string name="password">Password</string>
