--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,15 @@
     <string name="action_leaderboard">Leaderboard</string>
 
     <string name="username">Username</string>
+    <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="password_again">Password Again</string>
     <string name="error_intro">"Please "</string>
     <string name="error_blank_username">enter a username</string>
+    <string name="error_blank_email">enter an email</string>
     <string name="error_blank_password">enter a password</string>
     <string name="error_mismatched_passwords">enter the same password twice</string>
-    <string name="error_join">", and "</string>
+    <string name="error_join">" and "</string>
     <string name="error_end">.</string>
     <string name="progress_signup">Signing you up!</string>
     <string name="progress_login">Logging you up!</string>
