--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <resources>
     <string name="app_name">Winnipeg Trails</string>
-
-    <string name="action_settings">Settings</string>
-    <string name="action_help">Help</string>
-    <string name="action_gems">Hidden Gems</string>
-    <string name="action_leaderboard">Leaderboard</string>
-
+    <string name="settings">Settings</string>
+    <string name="gems">Hidden Gems</string>
+    <string name="leaderboard">Leaderboard</string>
     <string name="username">Username</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
@@ -18,7 +15,7 @@
     <string name="error_join">" and "</string>
     <string name="error_end">.</string>
     <string name="progress_signup">Signing you up!</string>
-    <string name="progress_login">Logging you up!</string>
+    <string name="progress_login">Logging you in!</string>
     <string name="signup">Sign up</string>
     <string name="login">Log in</string>
     <string name="scan">Scan</string>
