--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,17 @@
     <string name="progress_login">Logging you in!</string>
     <string name="signup">Sign up</string>
     <string name="login">Log in</string>
-    <string name="scan">Scan</string>
     <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
+    <string name="mode">PICK YOUR MODE</string>
+    <string name="walk">WALK</string>
+    <string name="skateboard">SKATEBOARD</string>
+    <string name="bicycle">BICYCLE</string>
+    <string name="wheelchair">WHEELCHAIR</string>
+    <string name="skate">SKATE</string>
+    <string name="ski">SKI</string>
+    <string name="start">START</string>
     <string name="no_location_detected">Could not detect your location.</string>
     <string name="no_eggs_found">No gems are within range of you.</string>
+    <string name="no_mode_selected">You must select a mode of transport.</string>
 </resources>
