--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="manual">VIEW MANUAL</string>
     <string name="add">ADD GEM OR COMBO</string>
     <string name="prizes">DONATIONS/PRIZES</string>
+    <string name="points">My Points</string>
     <string name="exit">X</string>
     <string name="username">Username</string>
     <string name="email">Email</string>
