--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="progress_signup">Signing you up!</string>
     <string name="progress_login">Logging you in!</string>
     <string name="progress_egg">Loading gem details!</string>
+    <string name="progress_egg_list">Loading hidden gems!</string>
+    <string name="progress_user_list">Loading leaderboard!</string>
     <string name="signup">Sign up</string>
     <string name="login">Login</string>
     <string name="submit">Submit</string>
